# android_study

./: .gitignore  README  README.md  local.properties  settings.gradle  settings.gradle.kts
app/: build.gradle  build.gradle.kts
app/src/main/: AndroidManifest.xml  CMakeLists.txt
app/src/main/assets/: xposed_init
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/hello/: hello.cpp
app/src/main/cpp/native_hook/: native_hook.cpp
app/src/main/cpp/other/: other.cpp
app/src/main/java/com/example/android_study/: Device_Fingerprinting.kt  MainActivity.kt  hook.kt  hook_aaid.java  hook_copy.kt  hook_java.java
app/src/main/java/com/example/myapplication/: MainActivity.java  hook.java  log.java  test.java
app/src/main/java/thouger/study/: ChooseUtils.kt  Device_Fingerprinting.kt  MainActivity.kt  fileUtils.kt  hook.kt  hook_aaid.java  hook_java.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
hook/: build.gradle.kts
hook/src/main/: CMakeLists.txt
hook/src/main/cpp/: CMakeLists.txt
hook/src/main/cpp/native_hook/: CMakeLists.txt
hook/src/main/java/thouger/hook/: hook.kt  hook_aaid.java  hook_copy.kt  hook_java.java
